new resource file

--- a/resources.html
+++ b/resources.html
@@ -1,16 +1,25 @@
 <div class="inside">
-    <h1><strong>Resource:</strong></h1>
+  <h1><strong>Resources:</strong></h1>
     <ol>
-        <li>
-            <a href="page.html?p=ROI">Health Research Opportunity Index (ROI)</a>
-        </li>
-        <li>
-            <p>Estimating Disease Burden Using Google Trends and Wikipedia Data</p>
-            <ol style="list-style-type:disc;">
-                <li style="padding-bottom:0px;"><a href="files/resources/rqJan2017TableS1.xlsx">    Table S1: The p-values of hypothesis testing.</a></li>
-                <li style="padding-bottom:0px;"><a href="files/resources/rqJan2017TableS2.docx">    Table S2: Correlations between the relative page reviews on Wikipedia and relative disease burdens.</a></li>
-                <li styple="padding-bottom:0px;"><a href="files/resources/rqJan2017FigS1.jpeg">    Fig.1: LASSO cross validation curves and variable selection results for the disease prevalence prediction of four diseases. </a></li>
-            </ol>
-        </li>
+      <li>
+          <h3><a href="page.html?p=ROI">Health Research Opportunity Index (ROI)</a></h3>
+      		<p>We included US patents data into the calculation of Health Research Opportunity Index (ROI) and updated Health Research Opportunity Indices (ROI) by adding data from more recent years (2012-2017). Please check it out! (07/07/2018)</p>
+   	  <p>Since our work on Health Research Opportunity Index (ROI) was published on Nature Biotechnology in August 2015, we have received overwhelming feedback, including many requests for data from both academia and industry. Therefore we created this site to illustrate Health Research Opportunity Indices (ROI) during 2000-2011 using an interactive visualization tool. We are still working on improving our model and will post future updates on this site.  (10/11/2015)         	  </li>
+      <li>
+        <h3><strong>Supplemental Information for our publications</strong>
+        </h3>
+        <blockquote>
+          <p> <em>Estimating disease burden using Google Trends and Wikipedia data.</em> Qiu R, Hadzikadic M, <strong>Yao L*</strong>. The 30th International Conference on Industrial, Engineering, Other Applications of Applied Intelligent Systems (Special Track: Intelligent Systems in Healthcare and mHealth for Health Outcomes), Arras, France (2017)</p>
+        </blockquote>
+      </li>
+    
+      <ol>
+        <blockquote>
+          <p><a href="files/resources/rqJan2017TableS1.xlsx">Table S1: The p-values of hypothesis testing.</a></p>
+          <p><a href="files/resources/rqJan2017TableS2.docx">    Table S2: Correlations between the relative page reviews on Wikipedia and relative disease burdens.</a></p>
+          <p><a href="files/resources/rqJan2017FigS1.jpeg">    Fig.1: LASSO cross validation curves and variable selection results for the disease prevalence prediction of four diseases. </a></p>
+        </blockquote>
+      </ol>
+      </li>	
     </ol>
 </div>
