different font for small screen, typo fixed

--- a/Lixia-Yao-NLM-Career-Development-Award.html
+++ b/Lixia-Yao-NLM-Career-Development-Award.html
@@ -40,7 +40,7 @@
 			It is also the home to leading research centers and institutes, including the Cyber Defense and
 			Network Assurability (CyberDNA) Center, the Bioinformatics Research Center, the Charlotte Visualization
 			Center, the Complex Systems Institute, and the Center for Education Innovation.
-			Active research awards currently total $20 Million.  <a href="cci.uncc.edu">cci.uncc.edu</a>  @UNCC_CCI
+			Active research awards currently total $20 Million.  <a href="https://cci.uncc.edu/">@UNCC_CCI</a>
 		</p>
 		<p><strong>About the University of North Carolina at Charlotte</strong></p>
 		<p>UNC Charlotte is North Carolina’s urban research university. It is the fourth largest campus among the
