--- a/miscellanea.html
+++ b/miscellanea.html
@@ -35,7 +35,6 @@
         <li>Journal of Clinical Bioinformatics</li>
         <li>Health Information and Libraries Journal</li>
         <li>Journal of the Medical Library Association</li>
-        <li></li>
     </ul>
     <h3 id="misc_link"><strong>Related Links:</strong></h3>
     <ul>
@@ -50,7 +49,7 @@
   <h3 id="misc_coll"><strong>Collaborations:</strong></h3>
     <ul>
         <li><a href="https://cci-hit.uncc.edu/">Dr. Yaorong Ge</a></li>
-        <li><a href="http://www.ci.uchicago.edu/research/rzhetsky/">Dr. Andrey Rzhetksy</a></li>
+        <li><a href="https://genes.uchicago.edu/directory/andrey-rzhetsky-phd">Dr. Andrey Rzhetksy</a></li>
         <li><a href="http://www.knowledgelab.org/">Dr. James A. Evans</a></li>
         <li><a href="http://www.annadivoli.com/">Dr. Anna Divoli</a></li>
     </ul>
