--- a/publication.html
+++ b/publication.html
@@ -33,7 +33,7 @@
         <li>Identifying serendipitous drug usages in patient forum data &ndash; a feasibility study. Ru B, Warner-Hillard C, Ge Y, <strong>Yao L*</strong>, The 10<sup>th</sup> International Conference on Health Informatics (HEALTHINF), Porto, Portugal (2017) (Acceptance rate: 21%)</li>
         <li>A content analysis of patient-reported medication outcomes on social media. Ru B, Harris K, <strong>Yao L*</strong>. The Data Mining in Biomedical Informatics and Healthcare (DMBIH) workshop, IEEE International Conference on Data Mining (ICDM), Atlantic City, NJ (2015) (Best Paper Award)</li>
     </ol>
-    <p id="Short"><strong>Peer Reviewed Short Papers/Extended Abstracts:</strong></p>
+    <h3 id="Short"><strong>Peer Reviewed Short Papers/Extended Abstracts:</strong></h3>
     <ol>
         <li>Probing Technology Innovation on Diseases via Patent Mining. Huang M. and <strong>Yao L</strong>. The American Medical Informatics Association Annual Symposium, San Francisco, 2018 </li>
         <li>Characterizing treatment strategies of intrahepatic bile duct cancer by literature mining. H Guo, N Zhang, N Hong, <strong>L Yao</strong>, W Duan, Z Zhang. The 2nd International Workshop on Healthcare Knowledge Discovery and Management (IHKDM 2018), in conjunction with the IEEE International Conference on Healthcare Informatics (ICHI 2018), New York, NY 2018</li>
@@ -41,7 +41,7 @@
         <li>Identification of clinically meaningful clusters of multi-morbidity in a national cohort of adults using unsupervised learning. Ngufor C, McCoy R, <strong>Yao L</strong>, Sangaralingham L, Dunlay S, Shah N. The American Medical Informatics Association Annual Symposium, Washington DC, 2017</li>
         <li>A survey of social media for understanding patient-reported medication outcomes. Harris K, Ru B, <strong>Yao L*</strong>. The American Medical Informatics Association Annual Symposium, San Francisco, CA, 2015</li>
     </ol>
-    <p id="Posters"><strong>Peer Reviewed Abstracts/Posters:</strong></p>
+    <h3 id="Posters"><strong>Peer Reviewed Abstracts/Posters:</strong></h3>
     <ol>
         <li>A proof-of-concept study of mining social media to reposition drugs. Ru B and <strong>Yao L*</strong>, The International Society For Pharmacoeconomics and Outcomes Research (ISPOR) 21<sup>st</sup> Annual International Meeting, Washington DC, 05/2016</li>
         <li>30&nbsp;day&nbsp;hospital&nbsp;readmission analysis. Maddipatla R, Hadzikadic M, Misra-Patel D, <strong>Yao L*</strong>. 2015 IEEE International Conference on Big Data, Santa Clara CA, 11/2015</li>
@@ -52,11 +52,11 @@
         <li>Quantitative systems-level determinants of drug targets, <strong>Yao L.</strong> National Graduate Student Research Festival, The National Institute of Health, Bethesda MD, 11/2009</li>
         <li>Quantitative systems-level determinants of drug targets, <strong>Yao L</strong>, Rzhetsky R. International Conference on Intelligent Systems for Molecular Biology (ISMB), Toronto, Canada, 07/2008 (Best Poster Award)</li>
     </ol>
-    <p id="book"><strong>Book Editors:</strong></p>
+    <h3 id="book"><strong>Book Editors:</strong></h3>
     <ol>
         <li>Data Management and Analytics for Medicine and Healthcare. Wang F, <strong>Yao L</strong>, Luo G. Springer, 2017 (ISBN 978-3319577409)</li>
     </ol>
-    <p id="other"><strong>Other publications:</strong></p>
+    <h3 id="other"><strong>Other publications:</strong></h3>
     <ul>
         <li>
         The application of information technology in drug discovery and development. <strong>Yao L</strong>*, Yang L, Overseas Scholars, a Journal of Chinese Association for Science and Technology, USA, 2013 (ISSN: 1556-861X)        </li>
