--- a/news.html
+++ b/news.html
@@ -112,7 +112,7 @@
 			<img alt="Boshu Ru Lixia Yao Jingyi Shi Yaorong Ge Yi Zhen - 2015 AMIA Joint Summits - Sanfrancisco CA" src="newsfiles/AMIA_2015_Joint_Summits_Present_files/2015-AMIA-Joint-Summits.jpg"/>
 		</div>
 		<div class="col-md-6">
-			<h2>Boshu, Jingyi &amp; Yi present ar the AMIA Joint Summits on Translational Science</h2>
+			<h2>Boshu, Jingyi &amp; Yi present at the AMIA Joint Summits on Translational Science</h2>
 			<span>Mar-2015</span>
 			<p>Dr. Yaorong Ge, Dr. Lixia Yao, Yi Zhen, Boshu Ru and Jingyi Shi attended AMIA 2015
 				Joint Summits on Translational Science at San Francisco during the week of March 23-27.
