--- a/page.html
+++ b/page.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <span class="navbar-brand">Yao Lab @ Mayo Clinic</span>
+    <a href="index.html" class="navbar-brand">Yao Lab @ Mayo Clinic</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -64,12 +64,12 @@
                 </li>
                 <li class="nav-item dropdown desktop">
                     <a class="nav-link dropdown-toggle" href="page.html?p=people.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    People
+                        People
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="page.html?p=people.html#pm">Principle Investigator</a>
-                        <a class="dropdown-item" href="page.html?p=people.html#cm">Current Members</a>
-                        <a class="dropdown-item" href="page.html?p=people.html#alu">Alumni</a>
+                    <div class="dropdown-menu navbar-dark bg-dark" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item nav-link" href="page.html?p=people.html#pm">Principle Investigator</a>
+                        <a class="dropdown-item nav-link" href="page.html?p=people.html#cm">Current Members</a>
+                        <a class="dropdown-item nav-link" href="page.html?p=people.html#alu">Alumni</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -106,13 +106,27 @@
     </div>
 </nav>
 <!-- End Navigation -->
-<div id="content" class="container padded"></div>
+<div class="row">
+    <div id="content" class="col-lg-9 col-md-12 col-sm-11"></div>
+</div>
 <!-- End Page Content -->
-<div id="copyright">
-    Last modified on:
-    <script>
-        document.write(document.lastModified);
-    </script>
+<div id="copyright" class="row">
+    <!--<div class="col-md-6" style="text-align: center">-->
+    <!--Last modified on:-->
+    <!--<script>-->
+    <!--document.write(document.lastModified);-->
+    <!--</script>-->
+    <!--</div>-->
+    <div class="col-md-6" style="margin: auto">
+        <b>Lixia Yao, PhD</b>
+        <span class="myblock">Assistant Professor |</span>
+        <span class="myblock">Department of Health Sciences Research |</span>
+        <span class="myblock">Mayo Clinic<br></span>
+        <span class="myblock">p: 507-293-7953 |</span>
+        <span class="myblock">f: 507-284-1516 |</span>
+        <span class="myblock">a: 200 First Street SW, Rochester, MN 55905 |</span>
+        <span class="myblock">e: Yao.dot.Lixia(At)Mayo.dot.edu<br></span>
+    </div>
 </div>
 
 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
