--- a/people.html
+++ b/people.html
@@ -1,7 +1,7 @@
 
     <div class="row section" id="pm">
         <div class="col-lg-12">
-           <h1>Principle Investigator:</h1>
+           <h3>Principle Investigator:</h3>
         </div>
     </div>
     <div class="row para last">
@@ -27,7 +27,7 @@
     </div>
 	<div class="row section" id="cm">
         <div class="col-lg-12">
-           <h1>Current Members:</h1>
+           <h3>Current Members:</h3>
         </div>
     </div>
     <div class="row para">
@@ -154,11 +154,11 @@
     </div>
     <div class="row section" id="alu">
         <div class="col-lg-12">
-            <h3>Alumni</h3>:
+            <h3>Alumni:</h3>
         </div>
     </div>
     <div class="row">
-        <table class="table">
+        <table class="table" id="alu_table">
             <tr>
                 <td><strong>Name</strong></td>
                 <td><strong>Time in the lab</strong></td>
@@ -230,7 +230,7 @@
             <tr>
                 <td>Riyi Qui</td>
                 <td>2015 - 2016</td>
-                <td>Univeristy of North Carolina at Charlotte</td>
+                <td>University of North Carolina at Charlotte</td>
             </tr>
             <tr>
                 <td>Ratna Madhuri Maddipatla</td>
